--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<awaitility-version>3.1.2</awaitility-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -30,6 +31,12 @@
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>${awaitility-version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
