--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,25 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-cloud-azure-starter-integration-storage-queue</artifactId>
+			<version>4.3.0</version>
+		</dependency>
+		         <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-storage-queue</artifactId>
+            <version>12.13.0</version>
+          </dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-maven-lombok</artifactId>
+			<version>1.7.10</version>
 		</dependency>
 		<dependency>
 			<groupId>io.projectreactor</groupId>
