--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+azurestorage.queues.transactionauthrequestedevents.name=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME}
+
+spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_QUEUE_KEY}
+spring.cloud.azure.storage.queue.account-name=${ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME}
+spring.cloud.azure.storage.queue.endpoint=${ECOMMERCE_STORAGE_QUEUE_ENDPOINT}
+
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
