--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
-name: pagopa-ecommerce-scheduler
-description: Microservice that handles scheduled actions for transaction lifecycle and service retry logic in ecommerce pagoPA
+name: pagopa-ecommerce-scheduler-service
+description: Microservice to schedule events in ecommerce pagoPA
 type: application
-version: 1.0.0
-appVersion: 1.0.0
+version: 0.0.1
+appVersion: 0.0.1
 dependencies:
-- name: microservice-chart
-  version: 1.17.0
-  repository: "https://pagopa.github.io/aks-microservice-chart-blueprint"
+  - name: microservice-chart
+    version: 1.21.0
+    repository: "https://pagopa.github.io/aks-microservice-chart-blueprint"
