--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -2,63 +2,39 @@ microservice-chart:
   namespace: "ecommerce"
   nameOverride: ""
   fullnameOverride: ""
-
-  image:
-    repository: pagopadcommonacr.azurecr.io/pagopaecommerceschedulerservice
-    tag: "latest" #improve
-    pullPolicy: Always
-
-  livenessProbe:
-    httpGet:
-      path: /actuator/health/liveness
-      port: 8080
-    initialDelaySeconds: 60
-    failureThreshold: 6
-    periodSeconds: 10
-
-  readinessProbe:
-    httpGet:
-      path: /actuator/health/readiness
-      port: 8080
-    initialDelaySeconds: 60
-    failureThreshold: 6
-    periodSeconds: 10
-
   deployment:
     create: true
-
-  service:
-    create: true
-    type: ClusterIP
+    livenessProbePath: /actuator/health/liveness
+    readinessProbePath: /actuator/health/readiness
+  image:
+    repository: pagopadcommonacr.azurecr.io/pagopaecommerceschedulerservice
+    tag: "0.0.7" #improve
+    pullPolicy: Always
     port: 8080
-
   ingress:
-    create: true
     host: "weudev.ecommerce.internal.dev.platform.pagopa.it"
-    path: /pagopa-ecommerce-scheduler-service/(.*)
-
+    path: "/ecommerce"
+    pathType: "ImplementationSpecific"
   serviceAccount:
     create: false
     annotations: {}
     name: ""
-
   podAnnotations: {}
-
   podSecurityContext:
     seccompProfile:
       type: RuntimeDefault
-
   securityContext:
     allowPrivilegeEscalation: false
-
+  service:
+    type: ClusterIP
+    port: 80
   resources:
     requests:
-      memory: "256Mi"
+      memory: "96Mi"
       cpu: "40m"
     limits:
-      memory: "256Mi"
-      cpu: "150m"
-
+      memory: "300Mi"
+      cpu: "300m"
   autoscaling:
     minReplica: 1
     maxReplica: 2
@@ -77,41 +53,13 @@ microservice-chart:
           # metricAggregationInterval: "-1:1:0"
           metricAggregationType: Count
           targetValue: "30"
-
   envConfig:
-    # MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
-    # MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
-    # MONGO_PORT: "10255"
-    # REDIS_HOST: pagopa-d-weu-ecommerce-redis.redis.cache.windows.net
-    # REDIS_PORT: "6380"
-    # NODO_URI: https://api.dev.platform.pagopa.it/nodo/node-for-psp/v1
-    # NODO_READ_TIMEOUT: "10000"
-    # NODO_CONNECTION_TIMEOUT: "10000"
-    # ECOMMERCE_TRANSACTIONS_URI: https://api.dev.platform.pagopa.it/ecommerce/transactions-service/v1
-    # ECOMMERCE_TRANSACTIONS_READ_TIMEOUT: "10000"
-    # ECOMMERCE_TRANSACTIONS_CONNECTION_TIMEOUT: "10000"
-    # ECOMMERCE_SESSIONS_URI: https://api.dev.platform.pagopa.it/ecommerce/sessions-service/v1
-    # ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
-    # ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
-    # ECOMMERCE_PAYMENT_INSTRUMENTS_URI: https://api.dev.platform.pagopa.it/ecommerce/payment-instruments-service/v1
-    # ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT: "10000"
-    # ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT: "10000"
-    # PAYMENT_TRANSACTIONS_GATEWAY_URI: http://pagopa-ecommerce-payment-instruments-service:8080
-    # PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
-    # PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
-
+    REDIS_HOST: pagopa-d-pagopa-proxy-redis.redis.cache.windows.net
   envSecret:
-    # MONGO_PASSWORD: mongo-ecommerce-password
-    # REDIS_PASSWORD: redis-ecommerce-password
-    # NODO_CONNECTION_STRING: nodo-connection-string
-
+    JWT_SECRET: sessions-jwt-secret
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
-
   nodeSelector: {}
-
   tolerations: []
-
   affinity: {}
-
