--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -54,9 +54,25 @@ microservice-chart:
           metricAggregationType: Count
           targetValue: "30"
   envConfig:
-    REDIS_HOST: pagopa-d-pagopa-proxy-redis.redis.cache.windows.net
-  envSecret:
-    JWT_SECRET: sessions-jwt-secret
+    envConfig:
+      TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transactionauthrequestedtevents
+      AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
+      PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
+      PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
+      PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
+      NODO_URI: https://api.dev.platform.pagopa.it/nodo
+      NODO_READ_TIMEOUT: "10000"
+      NODO_CONNECTION_TIMEOUT: "10000"
+      MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
+      MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
+      MONGO_PORT: "10255"
+      MONGO_SSL_ENABLED: "true"
+      ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopadweuecommercesa
+    envSecret:
+      ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
+      ECOMMERCE_STORAGE_QUEUE_ENDPOINT: ecommerce-storage-endpoint
+      MONGO_PASSWORD: mongo-ecommerce-password
+      NODO_CONNECTION_STRING: nodo-connection-string
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
