--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -17,10 +17,25 @@ microservice-chart:
         tag: "latest"
         pullPolicy: Always
     envConfig:
-      REDIS_HOST: pagopa-u-weu-ecommerce-redis.redis.cache.windows.net
+      TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transactionauthrequestedtevents
+      AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
+      PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.uat.platform.pagopa.it/payment-transactions-gateway
+      PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
+      PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
+      NODO_URI: https://api.uat.platform.pagopa.it/nodo
+      NODO_READ_TIMEOUT: "10000"
+      NODO_CONNECTION_TIMEOUT: "10000"
+      MONGO_HOST: pagopa-u-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
+      MONGO_USERNAME: pagopa-u-weu-ecommerce-cosmos-account
+      MONGO_PORT: "10255"
+      MONGO_SSL_ENABLED: "true"
+      ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopauweuecommercesa
     envSecret:
-      REDIS_PASSWORD: redis-ecommerce-password
-  image:
+      ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
+      ECOMMERCE_STORAGE_QUEUE_ENDPOINT: ecommerce-storage-endpoint
+      MONGO_PASSWORD: mongo-ecommerce-password
+      NODO_CONNECTION_STRING: nodo-connection-string
+    image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommerceschedulerservice
     tag: "0.0.7"
     pullPolicy: Always
@@ -82,9 +97,25 @@ microservice-chart:
           metricAggregationType: Count
           targetValue: "30"
   envConfig:
-    REDIS_HOST: pagopa-u-weu-ecommerce-redis.redis.cache.windows.net
-    REDIS_PORT: "6380"
-    REDIS_SSL_ENABLED: "true"
+    envConfig:
+      TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transactionauthrequestedtevents
+      AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
+      PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.uat.platform.pagopa.it/payment-transactions-gateway
+      PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
+      PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
+      NODO_URI: https://api.uat.platform.pagopa.it/nodo
+      NODO_READ_TIMEOUT: "10000"
+      NODO_CONNECTION_TIMEOUT: "10000"
+      MONGO_HOST: pagopa-u-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
+      MONGO_USERNAME: pagopa-u-weu-ecommerce-cosmos-account
+      MONGO_PORT: "10255"
+      MONGO_SSL_ENABLED: "true"
+      ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopauweuecommercesa
+    envSecret:
+      ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
+      ECOMMERCE_STORAGE_QUEUE_ENDPOINT: ecommerce-storage-endpoint
+      MONGO_PASSWORD: mongo-ecommerce-password
+      NODO_CONNECTION_STRING: nodo-connection-string
   envSecret:
     JWT_SECRET: sessions-jwt-secret
     REDIS_PASSWORD: redis-ecommerce-password
