fix: enable healthcheck

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ paymentTransactionsGateway.connectionTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_CONN
 scheduler.authorizationRequestedEventTimeoutSeconds=${AUTH_REQUESTED_TIMEOUT_SECONDS}
 
 server.port=9000
+
+management.endpoint.health.probes.enabled=true
+
