--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -30,9 +30,9 @@ microservice-chart:
       MONGO_PORT: "10255"
       MONGO_SSL_ENABLED: "true"
       ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopauweuecommercesa
+      ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopauweuecommercesa.queue.core.windows.net/pagopauweuecommercesa
     envSecret:
       ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
-      ECOMMERCE_STORAGE_QUEUE_ENDPOINT: ecommerce-storage-endpoint
       MONGO_PASSWORD: mongo-ecommerce-password
       NODO_CONNECTION_STRING: nodo-connection-string
   image:
