--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -42,21 +42,21 @@ microservice-chart:
   livenessProbe:
     httpGet:
       path: /actuator/health/liveness
-      port: 8080
+      port: 9000
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
   readinessProbe:
     httpGet:
       path: /actuator/health/readiness
-      port: 8080
+      port: 9000
     initialDelaySeconds: 60
     failureThreshold: 6
     periodSeconds: 10
   service:
     create: true
     type: ClusterIP
-    port: 8080
+    port: 9000
   ingress:
     create: true
     host: "weuuat.ecommerce.internal.uat.platform.pagopa.it"
@@ -110,9 +110,9 @@ microservice-chart:
     MONGO_PORT: "10255"
     MONGO_SSL_ENABLED: "true"
     ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopauweuecommercesa
+    ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopauweuecommercesa.queue.core.windows.net/pagopauweuecommercesa
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
-    ECOMMERCE_STORAGE_QUEUE_ENDPOINT: ecommerce-storage-endpoint
     MONGO_PASSWORD: mongo-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
   keyvault:
