--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -104,6 +104,7 @@ microservice-chart:
     # MONGO_PASSWORD: mongo-ecommerce-password
     # REDIS_PASSWORD: redis-ecommerce-password
     # NODO_CONNECTION_STRING: nodo-connection-string
+    APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
 
   keyvault:
     name: "pagopa-d-ecommerce-kv"
