--- a/pom.xml
+++ b/pom.xml
@@ -380,11 +380,10 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>2.22.1</version>
 				<configuration>
-					<argLine>--enable-preview</argLine>
+					<argLine>${argLine} --enable-preview</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
