--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -66,7 +66,7 @@ microservice-chart:
           metricAggregationType: Count
           targetValue: "30"
   envConfig:
-    TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME: transactionevents
+    TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: transactionactivatedevents
     AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
