--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -45,6 +45,14 @@ stages:
       jobs: 
         - job: make_buildEndUnitTest
           steps:
+            - task: Cache@2
+              inputs:
+                key: 'maven | "$(Agent.OS)" | pom.xml'
+                restoreKeys: |
+                  maven | "$(Agent.OS)"
+                  maven
+                path: $(MAVEN_CACHE_FOLDER)
+              displayName: Cache Maven local repo
             - task: SonarCloudPrepare@1
               displayName: 'Prepare SonarCloud analysis configuration'
               inputs:
@@ -66,7 +74,7 @@ stages:
                 jdkArchitectureOption: 'x64'
                 publishJUnitResults: false
                 testResultsFiles: '**/surefire-reports/TEST-*.xml'
-                goals: 'clean verify'
+                goals: '$(MAVEN_OPTS) clean verify'
                 sonarQubeRunAnalysis: true
   
             - task: SonarCloudPublish@1
